facet-diff/tests/snapshots/diff_snapshots__diff_arrays_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before─────────────────╮
│[i32; 3] [1, 2, 3]     │
╰───────────────────────╯
╭After──────────────────╮
│[i32; 3] [1, 5, 3]     │
╰───────────────────────╯
╔Diff═══════════════════╗
║[                      ║
║    .. 1 unchanged item║
║    2 → 5              ║
║    .. 1 unchanged item║
║]                      ║
╚═══════════════════════╝
