facet-diff/tests/snapshots/diff_snapshots__diff_arrays_equal.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
[36m╭Before──────╮[0m
[36m│[0m[i32; 3] [  [36m│[0m
[36m│[0m  1,        [36m│[0m
[36m│[0m  2,        [36m│[0m
[36m│[0m  3,        [36m│[0m
[36m│[0m]           [36m│[0m
[36m╰────────────╯[0m
[32m╭After───────╮[0m
[32m│[0m[i32; 3] [  [32m│[0m
[32m│[0m  1,        [32m│[0m
[32m│[0m  2,        [32m│[0m
[32m│[0m  3,        [32m│[0m
[32m│[0m]           [32m│[0m
[32m╰────────────╯[0m
[33m╔Diff════════╗[0m
[33m║[0m[           [33m║[0m
[33m║[0m  1         [33m║[0m
[33m║[0m  2         [33m║[0m
[33m║[0m  3         [33m║[0m
[33m║[0m]           [33m║[0m
[33m╚════════════╝[0m
