facet-diff/tests/snapshots/diff_snapshots__diff_big_struct_multiple_changes.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
[38;2;86;95;137m╭Before──────────────────────────────────────────────────────╮[0m
[38;2;86;95;137m│[0m[1m[38;2;122;162;247mBigConfig[39m[0m[2m {[0m                                                 [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;115;218;202mname[39m[2m: [0m"[38;2;158;206;106mmy-service[39m"[2m,[0m                                       [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;115;218;202mversion[39m[2m: [0m[38;2;110;81;224m1[39m[2m,[0m                                               [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;115;218;202menabled[39m[2m: [0m[38;2;81;164;224mtrue[39m[2m,[0m                                            [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;115;218;202mmax_connections[39m[2m: [0m[38;2;81;126;224m100[39m[2m,[0m                                     [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;115;218;202mtimeout_ms[39m[2m: [0m[38;2;110;81;224m5000[39m[2m,[0m                                         [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;115;218;202mretry_count[39m[2m: [0m[38;2;81;224;193m3[39m[2m,[0m                                           [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;115;218;202mdebug_mode[39m[2m: [0m[38;2;81;164;224mfalse[39m[2m,[0m                                        [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;115;218;202mlog_level[39m[2m: [0m"[38;2;158;206;106minfo[39m"[2m,[0m                                        [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;115;218;202mcache_size[39m[2m: [0m[38;2;81;157;224m1024[39m[2m,[0m                                         [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;115;218;202mdescription[39m[2m: [0m"[38;2;158;206;106mA cool service[39m"[2m,[0m                            [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m[2m}[0m                                                           [38;2;86;95;137m│[0m
[38;2;86;95;137m╰────────────────────────────────────────────────────────────╯[0m
[38;2;86;95;137m╭After───────────────────────────────────────────────────────╮[0m
[38;2;86;95;137m│[0m[1m[38;2;122;162;247mBigConfig[39m[0m[2m {[0m                                                 [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;115;218;202mname[39m[2m: [0m"[38;2;158;206;106mmy-service[39m"[2m,[0m                                       [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;115;218;202mversion[39m[2m: [0m[38;2;110;81;224m2[39m[2m,[0m                                               [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;115;218;202menabled[39m[2m: [0m[38;2;81;164;224mtrue[39m[2m,[0m                                            [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;115;218;202mmax_connections[39m[2m: [0m[38;2;81;126;224m200[39m[2m,[0m                                     [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;115;218;202mtimeout_ms[39m[2m: [0m[38;2;110;81;224m10000[39m[2m,[0m                                        [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;115;218;202mretry_count[39m[2m: [0m[38;2;81;224;193m3[39m[2m,[0m                                           [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;115;218;202mdebug_mode[39m[2m: [0m[38;2;81;164;224mtrue[39m[2m,[0m                                         [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;115;218;202mlog_level[39m[2m: [0m"[38;2;158;206;106mdebug[39m"[2m,[0m                                       [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;115;218;202mcache_size[39m[2m: [0m[38;2;81;157;224m1024[39m[2m,[0m                                         [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;115;218;202mdescription[39m[2m: [0m"[38;2;158;206;106mAn even cooler service[39m"[2m,[0m                    [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m[2m}[0m                                                           [38;2;86;95;137m│[0m
[38;2;86;95;137m╰────────────────────────────────────────────────────────────╯[0m
[38;2;224;175;104m╔Diff════════════════════════════════════════════════════════╗[0m
[38;2;224;175;104m║[0m[38;2;86;95;137m{[39m                                                           [38;2;224;175;104m║[0m
[38;2;224;175;104m║[0m  [38;2;86;95;137m.. 4 unchanged fields[39m                                     [38;2;224;175;104m║[0m
[38;2;224;175;104m║[0m  [38;2;115;218;202mdebug_mode[39m[38;2;86;95;137m:[39m [38;2;247;118;142mfalse[39m → [38;2;115;218;202mtrue[39m                                  [38;2;224;175;104m║[0m
[38;2;224;175;104m║[0m  [38;2;115;218;202mdescription[39m[38;2;86;95;137m:[39m [38;2;247;118;142m"A cool service"[39m → [38;2;115;218;202m"An even cooler service"[39m  [38;2;224;175;104m║[0m
[38;2;224;175;104m║[0m  [38;2;115;218;202mlog_level[39m[38;2;86;95;137m:[39m [38;2;247;118;142m"info"[39m → [38;2;115;218;202m"debug"[39m                               [38;2;224;175;104m║[0m
[38;2;224;175;104m║[0m  [38;2;115;218;202mmax_connections[39m[38;2;86;95;137m:[39m [38;2;247;118;142m100[39m → [38;2;115;218;202m200[39m                                [38;2;224;175;104m║[0m
[38;2;224;175;104m║[0m  [38;2;115;218;202mtimeout_ms[39m[38;2;86;95;137m:[39m [38;2;247;118;142m5000[39m → [38;2;115;218;202m10000[39m                                  [38;2;224;175;104m║[0m
[38;2;224;175;104m║[0m  [38;2;115;218;202mversion[39m[38;2;86;95;137m:[39m [38;2;247;118;142m1[39m → [38;2;115;218;202m2[39m                                            [38;2;224;175;104m║[0m
[38;2;224;175;104m║[0m[38;2;86;95;137m}[39m                                                           [38;2;224;175;104m║[0m
[38;2;224;175;104m╚════════════════════════════════════════════════════════════╝[0m
