facet-diff/tests/snapshots/diff_snapshots__diff_bools_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
[36m╭Before────────╮[0m
[36m│[0m[38;2;81;164;224mtrue[0m          [36m│[0m
[36m╰──────────────╯[0m
[32m╭After─────────╮[0m
[32m│[0m[38;2;81;164;224mfalse[0m         [32m│[0m
[32m╰──────────────╯[0m
[33m╔Diff══════════╗[0m
[33m║[0m[31mtrue[39m → [32mfalse[39m  [33m║[0m
[33m╚══════════════╝[0m
