facet-diff/tests/snapshots/diff_snapshots__diff_bools_equal.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────╮
│true        │
╰────────────╯
╭After───────╮
│true        │
╰────────────╯
╔Diff════════╗
║true        ║
╚════════════╝
