facet-diff/tests/snapshots/diff_snapshots__diff_deeply_nested_structs.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
[36m╭Before──────────────╮[0m
[36m│[0mLevel1 {            [36m│[0m
[36m│[0m  inner: Level2 {   [36m│[0m
[36m│[0m    inner: Level3 { [36m│[0m
[36m│[0m      value: 1,     [36m│[0m
[36m│[0m    },              [36m│[0m
[36m│[0m  },                [36m│[0m
[36m│[0m}                   [36m│[0m
[36m╰────────────────────╯[0m
[32m╭After───────────────╮[0m
[32m│[0mLevel1 {            [32m│[0m
[32m│[0m  inner: Level2 {   [32m│[0m
[32m│[0m    inner: Level3 { [32m│[0m
[32m│[0m      value: 2,     [32m│[0m
[32m│[0m    },              [32m│[0m
[32m│[0m  },                [32m│[0m
[32m│[0m}                   [32m│[0m
[32m╰────────────────────╯[0m
[33m╔Diff════════════════╗[0m
[33m║[0m{                   [33m║[0m
[33m║[0m  inner: {          [33m║[0m
[33m║[0m    inner: {        [33m║[0m
[33m║[0m      value: [31m1[39m → [32m2[39m  [33m║[0m
[33m║[0m    }               [33m║[0m
[33m║[0m  }                 [33m║[0m
[33m║[0m}                   [33m║[0m
[33m╚════════════════════╝[0m
