facet-diff/tests/snapshots/diff_snapshots__diff_enums_different_struct_variants.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
[38;2;86;95;137m╭Before──────────────────────────╮[0m
[38;2;86;95;137m│[0m[1m[38;2;122;162;247mDetailedStatus[39m[0m[2m::[0m[1mActive[0m[2m {[0m        [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;115;218;202msince[39m[2m: [0m[38;2;110;81;224m2020[39m[2m,[0m                  [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m[2m}[0m                               [38;2;86;95;137m│[0m
[38;2;86;95;137m╰────────────────────────────────╯[0m
[38;2;86;95;137m╭After───────────────────────────╮[0m
[38;2;86;95;137m│[0m[1m[38;2;122;162;247mDetailedStatus[39m[0m[2m::[0m[1mInactive[0m[2m {[0m      [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;115;218;202mreason[39m[2m: [0m"[38;2;158;206;106mmaintenance[39m"[2m,[0m        [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m[2m}[0m                               [38;2;86;95;137m│[0m
[38;2;86;95;137m╰────────────────────────────────╯[0m
[38;2;224;175;104m╔Diff════════════════════════════╗[0m
[38;2;224;175;104m║[0m[38;2;247;118;142mDetailedStatus::Active {        [38;2;224;175;104m║[0m
[38;2;224;175;104m║[0m  since: 2020,                  [38;2;224;175;104m║[0m
[38;2;224;175;104m║[0m}[39m → [38;2;115;218;202mDetailedStatus::Inactive {  [38;2;224;175;104m║[0m
[38;2;224;175;104m║[0m  reason: "maintenance",        [38;2;224;175;104m║[0m
[38;2;224;175;104m║[0m}[39m                               [38;2;224;175;104m║[0m
[38;2;224;175;104m╚════════════════════════════════╝[0m
