facet-diff/tests/snapshots/diff_snapshots__diff_enums_different_tuple_variants.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
[36m╭Before──────────────────────────────────────╮[0m
[36m│[0mMessage::Text(hello)                        [36m│[0m
[36m╰────────────────────────────────────────────╯[0m
[32m╭After───────────────────────────────────────╮[0m
[32m│[0mMessage::Number(42)                         [32m│[0m
[32m╰────────────────────────────────────────────╯[0m
[33m╔Diff════════════════════════════════════════╗[0m
[33m║[0m[31mMessage::Text(hello)[39m → [32mMessage::Number(42)[39m  [33m║[0m
[33m╚════════════════════════════════════════════╝[0m
