facet-diff/tests/snapshots/diff_snapshots__diff_enums_different_unit_variants.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: a.diff(&b).to_string()
---
[31mStatus::Active[39m → [32mStatus::Inactive[39m
